  [Nicholas Clemett]
  * Refactored the BaseAvgSACorrelationModel to make avg_periods an optional argument
  * Added EmpiricalAvgSACorrelationModel
  * Added classes for the Clemett correlation models for active shallow crust, subduction interface, subduction slab and vrancea regions in europe based on the ESHM20 GMMs.
  
  [Michele Simionato
  * Internal: introduced subtasks in classical calculations
  * Added endpoint `validate_ini` to validate local files
  * Optimized preclassical by gridding the point sources in parallel

  [Christopher Brooks]
  * Added support for GMPE tables to be specifiable as the underlying
    GSIMs within conditional GMPEs.

  [Paolo Tormene]
  * Added an extractor `exposure_by_location`

  [Michele Simionato]
  * Turned tiling into an explicit parameter (i.e. you must pass it to
    enable the full tiling algorithm, before it was automagic)
  * Optimized the management of the RateMap in the classical calculator
  * Optimized the reading of the rates by vectorizing on the sites
  * Bug fix: `use_rates` was not overridden by the child calculation
  * Extended `install.py devel` to infer the version from the branch name

  [Christopher Brooks]
  * Added the option of using a modified form of the Campbell and Bozorgnia
    (2014) GMM's sigma model within the Kuehn et al. (2020) GMMs as required
    for the 2023 USGS Alaska model.
  * Refactored the indirect AvgSA GMPEs capabilities to permit the
    calculation of non-AvgSA IMTs using the underlying GMPE (added
    new unit test of classical/case_91 for checking this works within
    GmpeIndirectAvgSA and updated classical/case34 for checking this
    works within GenericGmpeAvgSA).

  [Michele Simionato]
  * Internal: removed configuration parameter `pmap_max_gb`
  * Implemented the "ilabel" feature i.e. region-dependent gsim logic trees
  * Reduced the number of chunks generated in classical calculations, which
    has a huge effect on performance if you have 192 cores or more
